@@ -792,28 +792,31 @@ namespace Input
 using namespace Input;
 
 class OptionParser {
-	std::stringstream m_ss;
+	std::string       m_option;
+	unsigned          m_optionIndex = 0;
+	bool              m_endOfOption = false;
 	const char* const m_type;
 	const char        m_delim;
 public:
 	OptionParser(std::string const & value, const char* type = "option", char delim = OptDelim)
-		: m_ss(value), m_type(type), m_delim(delim)
+		: m_option(value), m_type(type), m_delim(delim)
 	{}
 
 	bool empty() const
 	{
-		return m_ss.eof() || m_ss.str().empty();
+		return m_endOfOption || m_option.empty();
 	}
 
 	bool getNext(std::string& next)
 	{
-		if (m_ss.eof()) { return false; }
+		if (m_endOfOption) { return false; }
 
 		const int EscapeChar = '!';
 		bool escOn = false;
 
-		std::string str; char c;
-		while (m_ss.get(c)) {
+		std::string str;
+		while(m_optionIndex < m_option.length()) {
+			char const c = m_option[m_optionIndex++];
 			if (c == EscapeChar) {
 				if (escOn) { str.push_back(EscapeChar); }
 				escOn = !escOn;
@@ -832,8 +835,13 @@ public:
 				str.push_back(c);
 			}
 		}
+
 		if (escOn) { throw std::invalid_argument("Incomplete escape sequence"); }
 		if (str.empty()) { throw std::invalid_argument("Empty option values not allowed"); }
+
+		if (m_option.length() <= m_optionIndex)
+			if (m_option.empty() || m_option.back() != m_delim) // Don't set endOf if ending with delim.
+				m_endOfOption = true;
 
 		next = std::move(str);
 		return true;
@@ -841,7 +849,7 @@ public:
 	
 	__declspec(noreturn) void throwError() 
 	{
-		throw std::invalid_argument(fmt("Faulty %s value: %s", m_type, m_ss.str().c_str()));
+		throw std::invalid_argument(fmt("Faulty %s value: %s", m_type, m_option.c_str()));
 	}
 
 	std::string getNext()
